--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ nav {
     cursor: pointer;
 }
 
-.direita button:hover {
+.button-login>button:hover {
     background-color: #D4E4FA;
     border: 1px solid #2A7AE4;
     transition: 0.5s;
